LK-190: Fix login 'remember me' checkbox alignment

--- a/ckanext/ckanext-apicatalog_ui/less/ckan.less
+++ b/ckanext/ckanext-apicatalog_ui/less/ckan.less
@@ -140,4 +140,10 @@ iframe {
   padding: 3px 5px;
 }
 
+input[type="checkbox"]#field-remember {
+  // Fix layout for "remember me"-checkbox at login screen breaks on small screens
+  margin-top: 2px;
+  min-height: 0px;
+}
+
 @import "iehacks.less";
